# WIDIP-Migration-Py

Documentation/: Formation_Python_MCP_WIDIP.md  PRD_MIGRATION_WIBOT_PHASE2.md  (+1 more)
Workflow et MCP/widip-mcp-server/: Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml
Workflow et MCP/widip-mcp-server/migrations/: 001_add_quality_score.sql
Workflow et MCP/widip-mcp-server/src/: __init__.py  config.py  main.py
Workflow et MCP/widip-mcp-server/src/clients/: __init__.py  activedirectory.py  base.py  glpi.py  memory.py  mysecret.py  notification.py  observium.py  smtp.py
Workflow et MCP/widip-mcp-server/src/mcp/: __init__.py  protocol.py  registry.py  safeguard_queue.py  server.py
Workflow et MCP/widip-mcp-server/src/tools/: __init__.py  ad_tools.py  enrichisseur_tools.py  glpi_tools.py  memory_tools.py  mysecret_tools.py  notification_tools.py  observium_tools.py
Workflow et MCP/widip-mcp-server/src/utils/: __init__.py  logging.py  retry.py  secrets.py
Workflow et MCP/widip-mcp-server/tests/: __init__.py
Workflow et MCP/widip-mcp-server/workflows/: __init__.py  runner.py
Workflow et MCP/widip-mcp-server/workflows/core/: __init__.py  base.py  config.py  context.py  exceptions.py  mcp_client.py  redis_client.py  scheduler.py
Workflow et MCP/widip-mcp-server/workflows/enrichisseur/: __init__.py
Workflow et MCP/widip-mcp-server/workflows/health_check/: __init__.py  workflow.py
Workflow et MCP/widip-mcp-server/workflows/safeguard/: __init__.py  models.py  workflow.py
Workflow et MCP/widip-mcp-server/workflows/sentinel/: __init__.py
Workflow et MCP/widip-mcp-server/workflows/support/: __init__.py
(+38 files in other folders)
